# internal/model/user.go
@@ -37,15 +37,16 @@ type FriendRequest struct {
 }
 
 type UserGetListRequest struct {
-	Limit         int    `query:"limit" validate:"omitempty,gte=0"`
-	Offset        int    `query:"offset" validate:"omitempty,gte=0"`
-	SortBy        string `query:"sortBy" validate:"omitempty,oneof=friendCount createdAt"`
-	OrderBy       string `query:"orderBy" validate:"omitempty,oneof=asc desc"`
-	OnlyFriend    bool   `query:"onlyFriend"`
-	Search        string `query:"search"`
-	UserID        string `query:"-"`
-	DisableOffset bool   `query:"-"`
-	DisableOrder  bool   `query:"-"`
+	Limit         int      `query:"limit" validate:"omitempty,gte=0"`
+	Offset        int      `query:"offset" validate:"omitempty,gte=0"`
+	SortBy        string   `query:"sortBy" validate:"omitempty,oneof=friendCount createdAt"`
+	OrderBy       string   `query:"orderBy" validate:"omitempty,oneof=asc desc"`
+	OnlyFriend    bool     `query:"onlyFriend"`
+	Search        string   `query:"search"`
+	UserID        string   `query:"-"`
+	UserIDs       []string `query:"-"`
+	DisableOffset bool     `query:"-"`
+	DisableOrder  bool     `query:"-"`
 }
 
 type UserResponse struct {
@@ -53,5 +54,5 @@ type UserResponse struct {
 	Name        string `json:"name"`
 	ImageUrl    string `json:"imageUrl"`
 	FriendCount int    `json:"friendCount"`
-	CreatedAt   string `json:"createdAt"`
+	CreatedAt   string `json:"createdAt,omitempty"`
 }
